# wasm-bench-smartnic

./: README.md
apps/guest_cpu_hash/: guest.cwasm
apps/guest_cpu_hash/src/: lib.rs
apps/guest_cpu_multi/: guest.cwasm
apps/guest_cpu_multi/src/: lib.rs
apps/guest_mem_random/: guest.cwasm
apps/guest_mem_random/src/: lib.rs
apps/guest_mem_stream/: guest.cwasm
apps/guest_mem_stream/src/: lib.rs
apps/guest_net_checksum/: guest.cwasm
apps/guest_net_checksum/src/: lib.rs
apps/guest_net_scan/: guest.cwasm
apps/guest_net_scan/src/: lib.rs
apps/host/: .Cargo.toml.swp  Cargo.toml
apps/host/src/: main.rs  main.rs-bkp  main.rs-multithread-bkp
scripts/: aggregate_host_requests.py  aggregate_host_startup.py  aggregate_perf.py  aggregate_sar.py  aggregate_wrk.py  run.sh
