[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }

hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

wasmtime = { version = "42", features = ["component-model"] }
wasmtime-wasi = { version = "42", features = ["p1"] }
